Added new categories to new production

--- a/src/helper/locale/se/translation.json
+++ b/src/helper/locale/se/translation.json
@@ -132,7 +132,7 @@
         "1": "Förskola"
     },
     "Parkeringhus": {
-        "1": "Parkeringshus och Garagehus"
+        "1": "Parkeringshus"
     },
     "Idrottshall": {
         "1": "Idrottshall"
